--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
 </script>
 </head>
 <body>
-  
+  <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+  <header class="flex mt-10 pb-20">
+<div>
+  <h1 class="text-5xl md:text-7xl font-bold leading-20">It's good <br> tea time at The <br>Tea House</h1>
+  <p class="text-gray-500 mt-5">Tea and Botanical Solutions Supplier Give Optimum <br>Satisfaction To Your Taste Buds.</p>
+  <button class="bg-gradient-to-r from-orange-400 to-red-500 px-5 py-3 rounded-md text-white font-bold mt-5">Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
+</div>
+
+<div class="relative">
+  <div>
+    <img class="w-full" src="images/banner.png" alt="">
+  </div>
+  <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 rounded-md md:px-4 lg:py-4 top-28 md:top-80 md:left-32 lg:left-28">
+    <div>
+      <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+    </div>
+    <div class="ml-2">
+    <h2 class="lg:2xl font-bold">5.00</h2>
+    <p class="text-gray-500">Trust Pilot Ratings</p>
+  </div>
+  </div>
+</div>
+
+  </header>
+</main>
 </body>
 </html>
